--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "cd web_app && npm install && npm run build",
   "outputDirectory": "web_app/.next",
   "installCommand": "cd web_app && npm install",
-  "framework": "nextjs",
-  "rootDirectory": "web_app"
+  "framework": "nextjs"
 }
