--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "buildCommand": "cd web_app && npm install && npm run build",
+  "outputDirectory": "web_app/.next",
+  "installCommand": "cd web_app && npm install"
 }
