Fix vercel.json - use simple commands, set root dir in dashboard

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "cd web_app && npm install && npm run build",
-  "outputDirectory": "web_app/.next",
-  "installCommand": "cd web_app && npm install"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install"
 }
