Remove framework hint from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "buildCommand": "cd web_app && npm run build",
   "outputDirectory": "web_app/.next",
-  "installCommand": "cd web_app && npm install",
-  "framework": "nextjs"
+  "installCommand": "cd web_app && npm install"
 }
