--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd web_app && npm run build",
-  "outputDirectory": "web_app/.next",
-  "installCommand": "cd web_app && npm install"
+  "root": "web_app",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install"
 }
