--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "root": "web_app",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install"
+  "outputDirectory": ".next"
 }
