Replace Resend with Hostinger SMTP for transactional emails
- Remove resend package, add nodemailer v7
- Create lib/email/smtp.ts with Nodemailer transport and test mode
- Create lib/email/templates.ts with order, contact, and shipping templates
- Refactor contact form to use new email system
- Implement order confirmation email in Stripe webhook
- Update .env.example with Hostinger SMTP configuration
- Add emailplan.md documentation

--- a/.env.example
+++ b/.env.example
@@ -59,8 +59,21 @@ CJDROPSHIPPING_PASSWORD=""
 # ===========================================
 # EMAIL (Required for order notifications)
 # ===========================================
-# Get from https://resend.com/api-keys
-RESEND_API_KEY="re_..."
+# Hostinger SMTP Configuration
+# Get credentials from Hostinger hPanel > Emails > Email Accounts
+SMTP_HOST="smtp.hostinger.com"
+SMTP_PORT="465"
+SMTP_USER="orders@dububu.co"
+SMTP_PASSWORD="your-email-password"
+
+# Email addresses for different purposes
+SMTP_FROM_ORDERS="DuBuBu Orders <orders@dububu.co>"
+SMTP_FROM_SUPPORT="DuBuBu <hello@dububu.co>"
+SMTP_ADMIN_EMAIL="hello@dububu.co"
+
+# Test Mode - Set to "true" to redirect all emails to test recipient
+EMAIL_TEST_MODE="false"
+EMAIL_TEST_RECIPIENT="your-test-email@example.com"
 
 # ===========================================
 # APP CONFIG
