--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "nanoid": "^5.0.0",
     "next": "16.1.1",
     "next-auth": "^5.0.0-beta.25",
+    "nodemailer": "^7.0.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
-    "resend": "^4.0.1",
     "sonner": "^2.0.7",
     "stripe": "^17.0.0",
     "tailwind-merge": "^3.4.0",
@@ -38,6 +38,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
